chore: Update .gitignore for build artifacts and test output
- Ignore android/build/ directory
- Ignore test_output.txt file

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,9 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Build artifacts
+android/build/
+
+# Test output
+test_output.txt
