feat(env): Implement complete multi-environment setup (dev/staging/production)
This commit introduces a comprehensive multi-environment architecture supporting
separate development, staging, and production environments with independent
Firebase projects, build configurations, and deployment workflows.

## Environment Configuration

### Core Setup
- Created EnvConfig class with environment-specific settings
- Implemented Environment enum (dev, staging, production)
- Added environment detection helpers and color codes
- Configured feature flags per environment (logging, crashlytics, performance)

### Main Entry Points
- lib/main_dev.dart: Development environment entry point
- lib/main_staging.dart: Staging environment entry point
- lib/main_production.dart: Production environment entry point
- Each with environment-specific Firebase initialization

## Android Configuration

### Product Flavors
- Added flavorDimensions "environment" in build.gradle.kts
- Created three product flavors: dev, staging, production
- Unique applicationIds per flavor:
  - dev: com.example.myapp.dev
  - staging: com.example.myapp.staging
  - production: com.example.myapp
- Environment-specific app names with version suffixes

### Firebase Configuration Structure
- Created android/app/src/dev/ directory with README
- Created android/app/src/staging/ directory with README
- Created android/app/src/production/ directory with README
- Added setup instructions for google-services.json files

## Data Seeding System

### Service Implementation
- Created DataSeedingService with faker integration
- Generates realistic fake users, events, recommendations
- Creates messages, notifications, and social interactions
- Safety checks prevent execution in production
- Customizable seeding parameters

### Scripts
- scripts/seed_data.dart: Executable seeding script
- scripts/README.md: Comprehensive usage guide
- Support for environment detection and Firebase initialization

## CI/CD Workflows

### GitHub Action

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,18 @@ android/build/
 
 # Test output
 test_output.txt
+
+# Environment-specific Firebase configuration
+# Keep the production firebase_options.dart but exclude dev/staging
+lib/firebase_options_dev.dart
+lib/firebase_options_staging.dart
+
+# Flavor-specific google-services.json files
+# These contain API keys and should not be committed
+android/app/src/dev/google-services.json
+android/app/src/staging/google-services.json
+android/app/src/production/google-services.json
+
+# Environment variable files
+.env*
+!.env.example
