--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,9 @@ dev_dependencies:
   integration_test:
     sdk: flutter
 
+  # Data seeding for dev/staging environments
+  faker: ^2.1.0
+
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
